<resources>
    <string name="app_name">YHYHealthy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">YHY Healthy</string>
    <string name="ovulation">Ovulation Testing</string>
    <string name="temperature">Bluetooth Body\nTemperature</string>
    <string name="temperature_title">Bluetooth Body Temperature</string>
    <string name="pregnancy">Pregnancy Record</string>
    <string name="monitor">Breath Monitoring</string>
    <string name="update_success">Update Succeed</string>
    <string name="delete_success">Delete Succeed</string>
    <string name="camera_only_today">Take picture only today</string>
    <string name="please_select_fun_and_date">Please Select a Observer First</string>
    <string name="select_function">Function : </string>
    <string name="select_done">Search</string>
    <string name="please_chose_less_one">Please chose functions:</string>
    <string name="history_dialog_confirm">Confirm</string>
    <string name="history_functions_less_one">Please chose less one function</string>
    <string name="to">To</string>
    <string name="param_name">Saliva recognition:</string>
    <string name="body_degree">Basal Body Temp.</string>
    <string name="cycle_record_note">Notice</string>
    <string name="cycle_body_degree">Basal Body\nTemperature</string>
    <string name="cycle_param_name">Saliva\nRecognition</string>
    <string name="slycalendar_cancel">Cancel</string>
    <string name="slycalendar_save">Sure</string>
    <string name="dateFormat" translatable="false">MM/dd/yyyy</string>
    <string name="timeFormat" translatable="false">MM/dd/yyyy</string>
    <string name="period" translatable="false">%1$s – %2$s</string>
    <string name="tab_cal">Calendar</string>
    <string name="tab_rec">Record</string>
    <string name="tab_chart">Diagram</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget">Forget?</string>
    <string name="account_register">Register Account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_account">Email</string>
    <string name="please_input_account">Please input a account</string>
    <string name="please_input_password">Please input a password</string>
    <string name="verification">Verification Style</string>
    <string name="verification_edit">Change Verification</string>
    <string name="please_confirm_password">Confirm password again</string>
    <string name="register_name_digits">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="private_license">End User License Agreement</string>
    <string name="privacy_content">
   <![CDATA[<html>]]>
      <![CDATA[<style>]]>
         p.small {
            line-height: 1.5;
            font-size: 12px;
         }
      <![CDATA[</style>]]>
      <![CDATA[<body><p align="justify" class="small">]]>
        YHY INFORMATION TECHNOLOGY (ASIA) PTE. LTD. and its subsidiaries (hereinafter referred to as "YHY" or "We")
        authorize the user the use of this mobile application program (hereinafter referred to as "Application" or “App”).
        The application Application is not provided by means of through a sale.
        The Application is provided in accordance withunder the following terms and conditions.
      <![CDATA[<br><br>]]>
         Important Reminder
         The authorized user must read this agreement carefully before indicating the acceptance by using the App.
         By using the App, the user agrees with the terms and conditions of this contract.
         If the user does not agree to the terms and conditions of this Agreement, he or she should not download, install,
         and use the Application. Users under 18 years of age must have a legal representative or guardian read, understand,
         and agree to the content of this contract in order to register for and use this App.
         By letting their protégé using this App, the guardian or legal representative confirms to have read,
             understood, and agreed to the content of this contract as well as later alterations or amendments.
      <![CDATA[<br><br>]]>
         Terms and Conditions of Use
         YHY offers the authorized user limited and unexclusive access to this App in accordance withunder
         the following terms and conditions. By accepting these terms and conditions the authorized user agrees to not reproduce,
         duplicate, alter, decode, disassemble, plagiarize this app App and its content in any form or for any purposes.
         YHY reserves the right to alter this app App or stop providing service for it at any time or for any reasons including,
         but not limited to, a stop of supplied content by or termination of contracts with collaborating suppliers.
         Should YHY need to stop providing service for this app, this contract,
         and the rights it gives the user shall be terminated too.
         The Warranty and Liability Disclaimer included in this contract shall remain valid after the contract is terminated.
         YHY cannot be held liable to the authorized user or to any third parties for abandoning this app.
      <![CDATA[<br><br>]]>
         To protect the authorized user`s privacy, the user`s personal data will not be provided by any means to any third parties not related to YHY`s services or transactions, unless in the events of the following:
            1.	YHY obtained the authorized user`s consent or authorization.
            2.	Legal authorities or other governing bodies make a legitimate and official request to obtain the user`s personal data.
            3.	Upon handling personal user data to collaborating partners of YHY (including enterprises, organizations, or individuals), such collaborative partners will be under a duty of confidentiality to YHY, and thus must comply with this Authorized User Agreement as well as any other applicable confidentiality and security measures, including, but not limited to, YHY`s policy of handling personal data.
            4.	In order tTo provide the user with services unrelated to this App, and for that purpose conducts marketing measures together with a third party, thus needs to share the user`s information with such a third party, YHY will take the following actions based on the type of the user`s personal data:
            4.1 General Personal Data (E.G. Name, Mobile Phone Number, Date of Birth and Gender):
                1.	The authorized user`s personal data can be shared with third parties for marketing purposes. Should the user disagree with YHY providing and sharing personal data to third-party marketing partners, the user must notify YHY accordingly.
            4.2 Medical Data (E.G. Medical Records, Health Check Records, Records of product Use):
                1.	YHY will inform the user in the event of having to access medical data. The authorized user is free to decide whether to accept YHY providing and sharing the `s medical data to third-party marketing partners. Only upon receiving the user`s
                2.	 consent, YHY will share medical data with such marketing-partners
      <![CDATA[<br><br>]]>
         Restrictions
         The user shall not sell, lease, or loan this App to any third parties.
         The user recognizes that the content of this App is only for reference and information purposes.
         Therefore, in case of emergency or when lives are at risk,
         the user will restrain from solely relying on this App.
      <![CDATA[<br><br>]]>
         No Warranty
         This App is provided on an “as is” basis. The user agrees to use this app App at his own risk.
         YHY does not offer any level of warranty, declaration, or guarantee, be it explicable, inexplicable,
         legitimate, or by any other means of assurance, which includes, but is not limited to,
         the App content, quality, accuracy, completeness, effectiveness, reliability, merchantability,
         fitness for a particular purpose, usefulness, use or results to be obtained from the Application,
         or that the Application will be uninterrupted or error-free, by any legal means.
      <![CDATA[</p></body></html>]]>
   </string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_message">You must grant All Permissions</string>
    <string name="permission_warning">All permissions are necessary</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="chart_remind">Reminder:\nThe usual basal body temperature of a woman has two phases: A cold phase, which begins at the beginning of menstruation and lasts until ovulation and a hot phase, which lasts for 12-14 days after ovulation.</string>
    <string name="normal">Normal</string>
    <string name="brown">Brown</string>
    <string name="yellow">Yellow</string>
    <string name="milky">Milky</string>
    <string name="white">White</string>
    <string name="greenish_yellow">Greenish Yellow</string>
    <string name="fishy">Fishy</string>
    <string name="stink">Stink</string>
    <string name="liquid">Liquid</string>
    <string name="thick">Thick</string>
    <string name="liquid_milky">Liquid Milky</string>
    <string name="allergy">Allergy</string>
    <string name="hot">Hot</string>
    <string name="pain">Pain</string>
    <string name="green">Green</string>
    <string name="rusty">Rusty</string>
    <string name="gray_black">Gray Black</string>
    <string name="email">Email</string>
    <string name="phone">Text Message</string>
    <string name="privacy_confirm">create a new Account</string>
    <string name="password_confirm_error">password is not match</string>
    <string name="phone_verification">The SMS is disable</string>
    <string name="email_is_vaild">Email is valid</string>
    <string name="please_input_other_account">Please input remote account</string>
    <string name="please_input_authorization">Please input remote authorization code</string>
    <string name="add_new_remote_account">New Monitoring Account</string>
    <string name="setting_for_menstruation">Cycle Settings</string>
    <string name="setting_for_period_length">Menstruation Length</string>
    <string name="setting_for_menstruation_length">Cycle Length</string>
    <string name="setting_for_menstruation_start">Start Date of\nLast Menstruation</string>
    <string name="setting_for_menstruation_end">End Date of\nLast Menstruation</string>
    <string name="please_input_gender">Please chose gender</string>
    <string name="update_to_api">update</string>
    <string name="remind">This information is related to\novulation prediction, Please fill in \ncorrectly and save</string>
    <string name="start_period_date">Start\nDay</string>
    <string name="end_period_day">End\nDay</string>
    <string name="sure">Sure</string>
    <string name="update">update</string>
    <string name="title_education">Health Education</string>
    <string name="education_articles">Articles</string>
    <string name="education_video">Video</string>
    <string name="education_forum">Forum</string>
    <string name="education_consultation">online Consultation</string>
    <string name="please_pick_time">Please pick a time</string>
    <string name="please_input_drug">Please input Drug Name</string>
    <string name="please_input_dosage">Please input dosage</string>
    <string name="pill_record">Record Medication</string>
    <string name="pill_time">Time</string>
    <string name="pill_name">Medication Name</string>
    <string name="pill_dose">Dose</string>
    <string name="cancel">Cancel</string>
    <string name="download_excel">DownLoad Excel</string>
    <string name="download_excel_messages">Please input email address\nto get excel file</string>
</resources>