<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_register"
        android:layout_gravity="center"
        android:textSize="32dp"/>
    <EditText
        android:id="@+id/et_account_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/shape_edit_background"
        android:hint="@string/please_input_account"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/et_password_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/shape_edit_background"
        android:hint="@string/please_input_password"/>
    <EditText
        android:id="@+id/et_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/shape_edit_background"
        android:hint="@string/please_confirm_password"/>
    <EditText
        android:id="@+id/et_email_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/shape_edit_background"
        android:hint="@string/email_account"/>
    <EditText
        android:id="@+id/et_verification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/shape_edit_background"
        android:hint="@string/verification"/>
</LinearLayout>