<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/yhy_background"
    tools:context=".fragments.EducationFragment">

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="@dimen/font_title_education"
        android:text="@string/title_education" />

    <Button
        android:id="@+id/article"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_round_button"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAllCaps="false"
        android:textSize="@dimen/font_education_articles"
        android:text="@string/education_articles"/>

    <Button
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_round_button"
        android:layout_below="@+id/article"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:textAllCaps="false"
        android:textSize="@dimen/font_education_articles"
        android:text="@string/education_video"/>

    <Button
        android:id="@+id/discuss"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_round_button"
        android:layout_below="@+id/video"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:textAllCaps="false"
        android:textSize="@dimen/font_education_articles"
        android:text="@string/education_forum"/>

    <Button
        android:id="@+id/onlineCall"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_round_button"
        android:layout_below="@+id/discuss"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:textAllCaps="false"
        android:textSize="@dimen/font_education_articles"
        android:text="@string/education_consultation"/>

</RelativeLayout>