<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_fever">

    <TextView
        android:id="@+id/textView56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/pill_record"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline67"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.13229166" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <TextView
        android:id="@+id/textView78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pill_time"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="@+id/guideline66"
        app:layout_constraintTop_toTopOf="@+id/guideline67" />

    <EditText
        android:id="@+id/edt_pill_time"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_edittext_normal"
        android:ems="10"
        android:hint="@string/please_pick_time"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="@+id/guideline66"
        app:layout_constraintTop_toBottomOf="@+id/textView78" />

    <TextView
        android:id="@+id/textView79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="22dp"
        android:text="@string/pill_name"
        app:layout_constraintStart_toStartOf="@+id/guideline66"
        app:layout_constraintTop_toBottomOf="@+id/edt_pill_time" />

    <EditText
        android:id="@+id/edt_pill_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_edittext_normal"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/please_input_drug"
        app:layout_constraintStart_toStartOf="@+id/guideline66"
        app:layout_constraintTop_toBottomOf="@+id/textView79" />

    <TextView
        android:id="@+id/textView80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="22dp"
        android:text="@string/pill_dose"
        app:layout_constraintStart_toStartOf="@+id/guideline66"
        app:layout_constraintTop_toBottomOf="@+id/edt_pill_name" />

    <EditText
        android:id="@+id/edt_pill_does"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_edittext_normal"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/please_input_dosage"
        app:layout_constraintStart_toStartOf="@+id/guideline66"
        app:layout_constraintTop_toBottomOf="@+id/textView80" />

    <ImageView
        android:id="@+id/img_pill_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_highlight_off_black_48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_pill_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textColor="@color/colorPrimary"
        android:textSize="22dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>